salesforce-twitter integration task/force-app/main/default/objects/Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Identifies the class where the error occurred for debugging purposes.</description>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>