salesforce-twitter integration task/force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Describes the error or message logged.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>