salesforce-twitter integration task/force-app/main/default/objects/Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Captures detailed error stack trace if available.</description>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>