salesforce-twitter integration task/force-app/main/default/objects/Log__c/fields/User_Friendly_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Friendly_Message__c</fullName>
    <description>A user-readable version of the error message.</description>
    <label>User Friendly Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>